--- a/src/screens/settings_screen copy.kv
+++ b/src/screens/settings_screen copy.kv
@@ -271,55 +271,77 @@
                     background_checkbox_down: "assets/checkbox_on.png"
 
         # Buttons
-        BoxLayout:
+        BoxLayout: 
+            canvas.before:
+                Color:
+                    rgba: 0.6, 0.6, 0.6, 1  # background
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+          
             orientation: "horizontal"
-            halign: "left"
-            valign: "center"
+            halign: "left"            
             size_hint_y: None
-            height: "90dp"
-            #padding: 100, 100
-
-           
+            height: "50dp"
+            padding: "0dp"
+            
 
             Label:
-                text: " "
-                color: 0, 0, 0, 1
-                size_hint_x: 0.25
-               
+                
+                color: 0,0,0,1
+                size_hint_x: 0.1
+                canvas.before:
+                    Color:
+                        rgba: 1, 0.6, 0.6, 1  # background
+                    Rectangle:
+                        pos: self.pos
+                        size: self.size
+
             Button:
-                id: default_btn
-                text: "Save as defaults"
+                text: "Set as Defaults"                
+                valign: "center"
+                halign: "center"
+                text_size: self.size
                 font_size: '24sp'
+                markup: True
                 size_hint: None, None
-                padding: 25, 15
                 size: self.texture_size
-                color: 1,1,1,1
-                background_color:  .6, .8, .9, .8
+                padding: 10, 10                
 
                 on_press: root.set_as_defaults()
-                on_texture_size: self.size = [self.texture_size[0] + self.padding[0]*2, self.texture_size[1] + self.padding[1]*2]
 
-             
+                canvas.before:
+                    Color:
+                        rgba: 0, 1, 0.6, 1  # background
+                    Rectangle:
+                        pos: self.pos
+                        size: self.size
 
             Label:
                 text: " "
-                size_hint_x: 0.05
-                
+                size_hint_x: 0.1
+                canvas.before:
+                    Color:
+                        rgba: 1, 0.6, 1, 1  # background
+                    Rectangle:
+                        pos: self.pos
+                        size: self.size
+
             Button:
-                id: set_btn
-                text: "Set and return"
+                text: "Set ss"                
+                valign: "center"
+                halign: "center"
+                text_size: self.size
                 font_size: '24sp'
                 size_hint: None, None
-                padding: 25, 15
+                padding: 10, 10
                 size: self.texture_size
-                color: 1,1,1,1
-                background_color: 178/255., 197/255., 219/255., 1
-
+                markup: True
+                
+                
+                
                 on_press: root.go_to_home_screen()
-                on_texture_size: self.size = [self.texture_size[0] + self.padding[0]*2, self.texture_size[1] + self.padding[1]*2]
-
-              
-
-            Label:
-                text: " "
-                size_hint_x: 0.3
+        
+        #    Label:
+         #       text: " "
+          #      size_hint_x: 0
