--- a/src/screens/home_screen.kv
+++ b/src/screens/home_screen.kv
@@ -2,18 +2,17 @@
     name: "home"
     canvas.before:
         Color:
-            rgba: 1, 1, 1, 1  # White background
+            rgba: 1, 1, 1, 1  
         Rectangle:
             pos: self.pos
             size: self.size
 
-    BoxLayout:
+    BoxLayout: # header, main, footer
         orientation: "vertical"
-        padding: 10
-        spacing: 10
-
-        # Top bar
-        BoxLayout:
+        padding: 0
+        spacing: 0
+      
+        BoxLayout:   # header
             size_hint_y: None
             halign: "left"
             height: "40dp"
@@ -21,13 +20,13 @@
             spacing: "0dp"
             canvas.before:
                 Color:
-                    rgba: 0.3, 0.3, 0.4, 0.4  
+                    rgba: .8, .88, 1, 1
                 Rectangle:
                     pos: self.pos
                     size: self.size
             Label:
                 text: "BatLLM"
-                padding: 0
+                padding: 10
                 bold: True
                 color: .1,.1,.1, 1
                 font_size: "20sp"
@@ -35,29 +34,56 @@
                 valign: "middle"
                 size_hint_x: None
                 width: self.texture_size[0] + 20
-
-        # Main content area
-        BoxLayout:
+       
+        BoxLayout: # main 
             orientation: "horizontal"
-            spacing: 10
             size_hint_y: 0.85
-
-            # First Column (expanded)
-            BoxLayout:
+          
+            BoxLayout:   # First Column 
                 orientation: "vertical"
                 size_hint_x: 0.306  
-                padding: 5
-                spacing: 5                
+                padding: 0, 0
+                canvas.before:
+                    Color:                              
+                        rgba: 1,0,1,0
+                    Rectangle:
+                        pos: self.pos
+                        size: self.size
 
-                ScrollView:
+                BoxLayout: # text prompt title 1
+                    orientation: "horizontal"
+                    halign: "left"
+                    height: "48dp"
+                    size_hint_y: None
+                    padding: 50, 15
+                    canvas.before:
+                        Color:                              
+                            rgba: .8, .88, 1, .7
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+
+                    Label:
+                        text: "Player One's Prompting Area"
+                        bold: 1                                                             
+                        color: 0, 0, 0, .8
+                        halign: "left"
+                        padding: 0
+                    
+                    Label:
+                        text:""
+                        size_hint_x: .9
+
+                ScrollView: # prompt history 1
                     size_hint: (1, .5)
                     bar_width: 10
                     do_scroll_x: False
                     do_scroll_y: True
                     scroll_type: ['bars', 'content'] 
-                    background_color: 1, 1, 1, 1
+                    background_color: 1, 1, 1, 1                    
 
                     TextInput:
+                        padding: 20, 10
                         id: prompt_history_player_1
                         text:""                             
                         multiline: True
@@ -72,22 +98,22 @@
                         background_normal: ""        # removes border image
                         background_active: ""        # removes active border image
                 
-                BoxLayout:
+                BoxLayout: # buttons
                     orientation: "horizontal"
                     height: "20dp"
                     size_hint_y: None
                     Button:
                         text: "<"
                     Button:
-                        text: "select"
+                        text: "copy"
                     Button:
                         text: ">"
 
-                ScrollView:
+                ScrollView: # prompt input
                     size_hint: (1, .5)
                     bar_width: 10
                     do_scroll_x: False
-                    do_scroll_y: True
+                    do_scroll_y: True                    
                     scroll_type: ['bars', 'content'] 
 
                     TextInput:
@@ -103,15 +129,47 @@
                         bar_width: 10   
                                     
 
-                BoxLayout:
+                BoxLayout: # submit button
                     size_hint_y: None
-                    height: "20dp"
+                    height: "30dp"
                     spacing: 5                    
                     Button:
                         background_color: .9, .2, .2, 1
                         text: "Submit"
+                        bold: 1
 
-                ScrollView:
+                Label:
+                    text:""
+                    height: "8dp"
+                    size_hint_y: None
+
+                BoxLayout: # text prompt title 2
+                    orientation: "horizontal"
+                    halign: "left"
+                    height: "48dp"
+                    size_hint_y: None
+                    padding: 50, 15
+                    canvas.before:
+                        Color:                              
+                            rgba: .8, 65, .9, .7
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+
+                    Label:
+                        text: "Player Two's Prompting Area"
+                        bold: 1                                                             
+                        color: 0, 0, 0, .8
+                        halign: "left"
+                        padding: 0
+                    
+                    
+                    Label:
+                        text:""
+
+               
+
+                ScrollView: # pl 2
                     size_hint: (1, .5)
                     bar_width: 10
                     do_scroll_x: False
@@ -141,7 +199,7 @@
                     Button:
                         text: "<"
                     Button:
-                        text: "select"
+                        text: "copy"
                     Button:
                         text: ">"
 
@@ -165,63 +223,144 @@
                         bar_width: 10   
                                     
 
-                BoxLayout:
+                BoxLayout: # submit button 1
                     size_hint_y: None
-                    height: "20dp"
+                    height: "30dp"
                     spacing: 5                    
-                    Button:
+                    
+                    Button:                        
                         background_color: .9, .2, .2, 1
                         text: "Submit"
+                        bold: 1
 
-            # Second Column (reduced)
-            BoxLayout:
+           
+            BoxLayout:  # Second Column  v
                 orientation: "vertical"
-                size_hint_x: 0.10  # Reduced to 1/3 of original 0.166
-                padding: 5
-                spacing: 5
-                    
+                size_hint_x: 0.10 
+                size_hint_y: 1
+                halign: "left"
+                padding: 0, 0
+                
                 canvas.before:
                     Color:
-                        rgba: 0.9, 0.9, 0.9, 1  # Light gray
+                        rgba: 0.4, 1, 1, 0 # todo remove
                     Rectangle:
                         pos: self.pos
                         size: self.size
-                
-                Label:
-                    text: "Commands"
-                    bold: 1
-                    padding: 5, 0
-                    color: 0, 0, 0, 1
+                    
+                BoxLayout: # 2 col, play 1 v
+                    orientation: "vertical"
+                    
+                    canvas.before:
+                        Color:                           
+                            rgba: .8, .88, 1, .5
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+                        
+                    BoxLayout: # title commands 1
+                        orientation: "horizontal"
+                        height: "48dp"
+                        size_hint_y: None
+                        padding: 50, 35
+                        
+                        canvas.before:
+                            Color:                                
+                                rgba: .8, .88, 1, .5
+                            Rectangle:
+                                pos: self.pos
+                                size: self.size
+
+                        Label:
+                            text: "Commands"
+                            bold: 1                        
+                            halign: "left"                            
+                            
+                            color: 0, 0, 0, 1
+                            size_hint_y: None
+                            size_hint_x: None
+                            height: "12dp" 
+                            
+                        Label:
+                            size_hint_x: .02
+
+                    
+                    
+                    ScrollView:
+                        TextInput:
+                            padding: 35, 20
+                            id: output_history_player_1                          
+                            text: "1.  M\n2.  R20\n3.  S\n4.  S\n5.  B"
+                            multiline: True
+                            readonly: True
+                            size_hint_y: 1                        
+                            background_color: .95, .96, .95, 1
+                            background_normal: ""        # removes border image
+                            background_active: ""        # removes active border image
+                   
+
+                Label: # separator
+                    text: "."
+                    height: "32dp"
                     size_hint_y: None
-                    height: "20dp"
                 
-                ScrollView:
-                    TextInput:
-                        padding: 40
-                        id: output_history_player_1
-                        text: "M\nR20\nS\nS\nB"
-                        multiline: True
-                        readonly: True
-                        size_hint_y: 1
 
-                Label:
-                    text: "Commands"
-                    bold: 1
-                    padding: 5, 0
-                    color: 0, 0, 0, 1
-                    size_hint_y: None
-                    height: "20dp"
 
-                ScrollView:
-                    TextInput:
-                        id: output_history_player_2
-                        text: ""
-                        multiline: True
-                        readonly: True
-                        size_hint_y: 1
+                BoxLayout: # 2 col, play 2, v
+                    orientation: "vertical"                    
+                    canvas.before:
+                        Color:                        
+                            rgba: 0, 0, 1, 1
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
 
-            # Third Column (auto)
-            BoxLayout:
+
+                    BoxLayout: # title commands 2
+                        orientation: "horizontal"                        
+                        height: "48dp"
+                        size_hint_y: None
+                        padding: 50, 35
+                        canvas.before:
+                            Color:                             
+                                rgba: .83, 1, .98, 1
+                            Rectangle:
+                                pos: self.pos
+                                size: self.size
+
+                        Label:
+                            text: "Commands"
+                            bold: 1
+                            halign: "left"
+                            
+                            color: 0, 0, 0, 1
+                            size_hint_y: None
+                            size_hint_x: None
+                            height: "12dp" 
+                            
+                        Label:
+                            size_hint_x: .02
+
+
+                    ScrollView:
+                        TextInput:
+                            padding: 35, 20
+                            id: output_history_player_2
+                            text: ""
+                            multiline: True
+                            readonly: True
+                            size_hint_y: 1
+                            background_color: .95, .96, .95, 1
+                            background_normal: ""        # removes border image
+                            background_active: ""        # removes active border image
+
+                Label: # separator
+                    text: "."
+                    height: "24dp"
+                    size_hint_y: None                            
+                                            
+           
+            BoxLayout:  # Third Column (game)
                 orientation: "vertical"
                 padding: 5
                 spacing: 5
@@ -236,8 +375,8 @@
                     text: "Main Content Area"
                     color: 0, 0, 0, 1
 
-        # Footer
-        BoxLayout:
+       
+        BoxLayout:  # Footer
             orientation: "horizontal"
             halign: "left"
             size_hint_y: None
@@ -246,7 +385,7 @@
 
             canvas.before:
                 Color:
-                    rgba: 0.3, 0.3, 0.4, 1  # White background
+                    rgba: 0.3, 0.3, 0.4, 1  
                 Rectangle:
                     pos: self.pos
                     size: self.size
@@ -266,7 +405,7 @@
             Button:
                 text: "Settings"
                 on_press: root.go_to_settin_screen()
-                
+
             Button:
                 text: "Save game"
            
