--- a/src/screens/home_screen.kv
+++ b/src/screens/home_screen.kv
@@ -415,14 +415,9 @@
                     id: game_board
                     size_hint_x: 1
                     size_hint_y: 1
+                    padding: 0, 0
 
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 1, .2
-
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
+                   
                                     
        
         BoxLayout:  # Footer
