--- a/src/screens/home_screen.kv
+++ b/src/screens/home_screen.kv
@@ -391,7 +391,7 @@
                     padding: 0, 34
                     canvas.before:
                         Color:                             
-                            rgba: .83, 1, .98, 1
+                            rgba: 0, 0, 0, .1
                         Rectangle:
                             pos: self.pos
                             size: self.size
