logic works without augmenting, many a detail to fix still

--- a/src/screens/home_screen.kv
+++ b/src/screens/home_screen.kv
@@ -300,7 +300,7 @@
                         TextInput:
                             padding: 35, 20
                             id: output_history_player_1                          
-                            text: "1.  M\n2.  R20\n3.  S\n4.  S\n5.  B"
+                            text:
                             multiline: True
                             readonly: True
                             size_hint_y: 1                        
