--- a/src/screens/home_screen.kv
+++ b/src/screens/home_screen.kv
@@ -372,42 +372,45 @@
            
             BoxLayout:  # Third Column (game area)
                 orientation: "vertical"
-                padding: 30, 30          
-
+                padding: 20, 20          
+                
                 canvas.before:
                     Color:
-                        rgba: 1, 1, 1, 1
+                        #rgba: 0, 0, 0, .15
+                        rgba: .8,.83,.8,.5
                     Rectangle:
                         pos: self.pos
                         size: self.size
 
                 
-                BoxLayout:  # Title
-                    orientation: "horizontal"             
 
-                    size_hint_y: None
+
+#                BoxLayout:  # Title
+#                    orientation: "horizontal"             
+
+#                    size_hint_y: None
                   
-                    size_hint_x: 1          
-                    padding: 0, 34
-                    canvas.before:
-                        Color:                             
-                            rgba: 0, 0, 0, .1
-                        Rectangle:
-                            pos: self.pos
-                            size: self.size
+#                    size_hint_x: 1          
+#                    padding: 0, 34
+#                    canvas.before:
+#                        Color:                             
+#                            rgba: 0, 0, 0, .1
+#                        Rectangle:
+#                            pos: self.pos
+#                            size: self.size
 
-                    Label:
-                        font_size: "14sp"
-                        text: "23 - 25 - 1 | 80 - 50"
-                        bold: 1
-                        halign: "left"
-                        color: 0, 0, 0, 1
-                        size_hint_y: None
-                        size_hint_x: .055
-                        height: "12dp" 
+#                    Label:
+#                        font_size: "14sp"
+#                        text: "23 - 25 - 1 | 80 - 50"
+#                        bold: 1
+#                        halign: "left"
+#                        color: 0, 0, 0, 1
+#                        size_hint_y: None
+#                        size_hint_x: .055
+#                        height: "12dp" 
                         
-                    Label:
-                        size_hint_x: .4
+#                    Label:
+#                        size_hint_x: .4
                     
                 
 
