--- a/src/screens/settings_screen.kv
+++ b/src/screens/settings_screen.kv
@@ -106,7 +106,7 @@
                     id: turns_slider
                     min: 1
                     max: 20
-                    value: root.total_turns
+                    value: root.turns_per_round
                     step: 1
                     on_value: turns_label.text = str(int(self.value))
                     size_hint_x: 0.5
