--- a/src/screens/home_screen.kv
+++ b/src/screens/home_screen.kv
@@ -480,6 +480,10 @@
                 on_press: root.go_to_settings_screen()
 
             Button:
-                text: "Save game"
-                on_press: root.save_game()
+                text: "New Game"
+                on_press: root.start_new_game()
+
+            Button:
+                text: "Save Session"
+                on_press: root.save_session()
            
