--- a/src/screens/home_screen.kv
+++ b/src/screens/home_screen.kv
@@ -246,8 +246,7 @@
                         on_press: root.submit_prompt(2)
 
            
-            BoxLayout:  # Second Column (commands histories)
-                
+            BoxLayout:  # Second Column (commands histories)                
                 orientation: "vertical"
                 size_hint_x: 0.10 
                 size_hint_y: 1
@@ -455,6 +454,7 @@
             size_hint_y: None
             height: "40dp"
             padding: "0dp"
+            font_size: "16sp"
 
             canvas.before:
                 Color:
@@ -465,25 +465,31 @@
 
             Label:
                 text: "https://github.com/krahd/BatLLM"
+                font_size: "16sp"
                 halign: "left"
                 color: 1,1,1,1
-                size_hint_x: 7.4
+                size_hint_x: 2
 
             Label:
-                text: "BatLLM 0.0.1b"
-                font_size: "14sp"
+                text: "BatLLM 0.0.1"
+                font_size: "16sp"
                 color: 1,1,1,1
                 halign: "left"
+                size_hint_x: 4
+                
 
             Button:
                 text: "Settings"
+                font_size: "16sp"
                 on_press: root.go_to_settings_screen()
 
             Button:
                 text: "New Game"
+                font_size: "16sp"
                 on_press: root.start_new_game()
 
             Button:
                 text: "Save Session"
+                font_size: "16sp"
                 on_press: root.save_session()
            
