Added 3 example prompts.

--- a/src/screens/home_screen.kv
+++ b/src/screens/home_screen.kv
@@ -124,7 +124,7 @@
                     TextInput:
                         id: prompt_player_1
                         #text: ""
-                        text: "reply with M, just the single letter. your response should be literally \"M\" (without the \")\""
+                        text: ""
                         hint_text: "New prompt"
                         multiline: True
                         readonly: False
@@ -223,7 +223,7 @@
                     TextInput:
                         id: prompt_player_2                        
                         #text: ""
-                        text: "reply with M, just the single letter. your response should be literally \"M\" (without the \")\""
+                        text: ""
                         hint_text: "New prompt"
                         multiline: True
                         readonly: False
