--- a/src/screens/settings_screen.kv
+++ b/src/screens/settings_screen.kv
@@ -288,13 +288,13 @@
                
             Button:
                 id: cancel_btn
-                text: "Cancel and return"
+                text: "Cancel"
                 font_size: '24sp'
                 size_hint: None, None
                 padding: 25, 15
                 size: self.texture_size
                 color: 1,1,1,1
-                background_color:  .6, .8, .9, .8
+                background_color:  1, .7, .8, .9
 
                 on_press: root.go_to_home_screen()
                 on_texture_size: self.size = [self.texture_size[0] + self.padding[0]*2, self.texture_size[1] + self.padding[1]*2]
@@ -307,7 +307,7 @@
                
             Button:
                 id: default_btn
-                text: "Save as defaults"
+                text: "Set as Defaults"
                 font_size: '24sp'
                 size_hint: None, None
                 padding: 25, 15
@@ -326,13 +326,13 @@
                 
             Button:
                 id: set_btn
-                text: "Set and return"
+                text: "Set Temporarily" 
                 font_size: '24sp'
                 size_hint: None, None
                 padding: 25, 15
                 size: self.texture_size
                 color: 1,1,1,1
-                background_color: 178/255., 197/255., 219/255., 1
+                background_color: .6, .8, .9, .8
 
                 on_press: root.set_and_return()
                 on_texture_size: self.size = [self.texture_size[0] + self.padding[0]*2, self.texture_size[1] + self.padding[1]*2]
